# ROS_test

devel/: .catkin  .rosinstall  setup.sh
devel/include/amazing_car/: my_angle_msg.h  my_gps_state.h  my_location_msg.h
devel/include/amcl/: AMCLConfig.h
devel/include/base_local_planner/: Position2DInt.h
devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelGrid.h  VoxelPluginConfig.h
devel/include/global_planner/: GlobalPlannerConfig.h
devel/include/wiimote/: IrSourceInfo.h  State.h  TimedSwitch.h
devel/lib/amazing_car/: algorithm  gprs_location_publisher  gyroscope  joy_subscriber  my_big_car_controller  my_car_angle_publisher  my_car_controller  my_car_front_location_publisher  my_car_rear_location_publisher  my_tar_location_publisher  serial_example  serial_subscriber  ui_transdata
devel/lib/amcl/: amcl
devel/lib/base_local_planner/: point_grid
devel/lib/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
devel/lib/fake_localization/: fake_localization
devel/lib/global_planner/: planner
devel/lib/joy/: joy_node
devel/lib/laser_scan_publisher_tutorial/: laser_scan_publisher
devel/lib/map_server/: map_saver  map_server  rtest
devel/lib/move_base/: move_base
devel/lib/navfn/: navfn_node
devel/lib/odometry_publisher_tutorial/: odometry_publisher
devel/lib/pkgconfig/: amazing_car.pc  amcl.pc  base_local_planner.pc  carrot_planner.pc  clear_costmap_recovery.pc  costmap_2d.pc  dwa_local_planner.pc  joy.pc  (+21 more)
src/turtle_snaker/: CMakeLists.txt
src/turtle_test/: CMakeLists.txt
src/turtle_test/src/: turtle_controller.cpp
(+74 files in other folders)
